# architect

./: README.md
architect_api/: .gitignore  README.md  create_data.py  create_db.py  main.py  pgvector.sh  pyproject.toml
architect_api/app/: config.py  database.py
architect_api/app/facades/: blackboard_facade.py  message_facade.py  project_facade.py
architect_api/app/models/: __init__.py  artifact.py  blackboard.py  message.py  project.py  project_worker.py  worker.py
architect_api/app/repositories/: artifact_repository.py  blackboard_repository.py  message_repository.py  project_repository.py  project_worker_repository.py  worker_repository.py
architect_api/app/routes/: blackboard_api.py  hello.py  message_api.py  project_api.py
architect_api/app/schemas/blackboard_api/: blackboard.py
architect_api/app/schemas/messages_api/: message.py
architect_api/app/schemas/project_api/: project.py
architect_api/app/schemas/worker_api/: worker.py
architect_api/postgres-data/: postmaster.pid
architect_api/postgres-data/base/1/: 2619  pg_internal.init
architect_api/postgres-data/base/17055/: 17390  17391  pg_internal.init
architect_api/postgres-data/base/5/: pg_internal.init
architect_api/postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
architect_ui/: README.md  package-lock.json  package.json
architect_ui/src/: app.css  app.html
architect_ui/src/lib/components/: Blackboard.svelte
architect_ui/src/lib/types/: project.ts
architect_ui/src/routes/: +layout.svelte  +page.svelte
(+2 files in other folders)
